# Scylla

./: .env.example  .gitignore  .importlinter  .markdownlint-cli2.yaml  .markdownlint.yaml  .pip-audit-ignore.txt  .pre-commit-config.yaml  .shellcheckrc  .tool-versions  .trivyignore  .yamllint.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  justfile  pixi.toml  pyproject.toml
.claude/: settings.json
.claude-plugin/skills/backward-compat-removal/: SKILL.md
.claude-plugin/skills/batch-pr-rebase-workflow/: SKILL.md
.claude-plugin/skills/bats-shell-testing/: SKILL.md
.claude-plugin/skills/ci-dependency-security-scanning/: SKILL.md
.claude-plugin/skills/ci-deprecation-enforcement/: SKILL.md
.claude-plugin/skills/config-default-model-drift/: SKILL.md
.claude-plugin/skills/consolidate-pre-commit-excludes/: SKILL.md
.claude-plugin/skills/deprecation-warning-migration/: SKILL.md
.claude-plugin/skills/doc-audit-policy-violations/: SKILL.md
.claude-plugin/skills/doc-contradiction-resolution/: SKILL.md
.claude-plugin/skills/enforce-model-config-consistency-hook/: SKILL.md
.claude-plugin/skills/fix-broken-doc-references/: SKILL.md
.claude-plugin/skills/fixture-timeout-calibration/: SKILL.md
.claude-plugin/skills/git-rebase-over-deletion/: SKILL.md
.claude-plugin/skills/git-worktree-collision-fix/: SKILL.md
.claude-plugin/skills/github-actions-ci-speedup/: SKILL.md
.claude-plugin/skills/model-config-explicit-model-id/: SKILL.md
.claude-plugin/skills/model-config-naming-validation/: SKILL.md
.claude-plugin/skills/orphan-config-detection/: SKILL.md
.claude-plugin/skills/preflight-closing-issues-fix/: SKILL.md
.claude-plugin/skills/production-code-quality-fixes/: SKILL.md
.claude-plugin/skills/pydantic-base-class-hierarchy/: SKILL.md
.claude-plugin/skills/pydantic-frozen-consistency/: SKILL.md
.claude-plugin/skills/pydantic-type-consolidation-metrics-judgment/: SKILL.md
.claude-plugin/skills/shellcheck-scope-templates/: SKILL.md
.claude-plugin/skills/skill-batch-eof-worktree-cleanup/: SKILL.md
.claude-plugin/skills/skill-path-resolution-fix/: SKILL.md
.claude-plugin/skills/sync-stale-future-improvements/: SKILL.md
.claude-plugin/skills/validate-agent-tools-content/: SKILL.md
.claude-plugin/skills/wheel-only-build/: SKILL.md
.claude-plugin/skills/wired-runner-fixture/: SKILL.md
.claude/agents/: chief-evaluator.md
.claude/shared/: metrics-definitions.md  pr-workflow.md  thinking-mode.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/actions/setup-pixi/: action.yml
.github/workflows/: _required.yml  ci-image.yml  digest-check.yml  docker-test.yml  merge-queue-smoke.yml  pre-commit.yml  release.yml  security.yml  shell-test.yml  test.yml
ci/: Containerfile  README.md
config/: defaults.yaml
docker/: Dockerfile  README.md  entrypoint.sh
docs/: README.md  analysis-prompt.md  arxiv-submission.md  notes.md  research_paper.tex  summary.md  template.md
docs/arxiv/dryrun/: SUBMISSION-CHECKLIST.md  paper.tex  references.bib
docs/arxiv/haiku/: build.sh  paper.tex  references.bib
docs/design/: analysis_pipeline.md  architecture.md  container-architecture.md  container-authentication.md  container-usage.md  grading-scale.md  judge-protocol.md  regenerate-results.md  rerun-agents-guide.md  rerun-judges-guide.md  rubric-schema.md  test-schema.md
docs/design/figures/: consistency-analysis.md  cost-of-pass-by-tier.md  cost-quality-pareto-frontier.md  cost-quality-regression.md  criteria-performance-by-tier.md  cumulative-cost.md  effect-size-forest-plot.md  failure-rate-aggregate.md  failure-rate-by-tier.md  failure-rate-per-subtest.md  grade-heatmap.md  implementation-rate-by-tier.md  implementation-rate-distribution.md  implementation-rate-vs-pass-rate.md  judge-agreement.md  judge-variance-overall.md  judge-variance.md  latency-analysis.md  metric-correlation-heatmap.md  pass-rate-by-tier.md  qq-plots-for-normality.md  score-histograms.md  score-variance-by-tier.md  subtest-run-heatmap.md  success-variance-aggregate.md  success-variance-per-subtest.md  tier-summary-heatmap.md  tier-uplift.md  token-distribution.md
docs/dev/: audit-2026-05-07-closeout.md  code-quality-audit-2025-02.md  compatibility.md  data-policy.md  dockerfile-npm-cve-patches.md  dockerfile-sha256-update.md  merge-queue-readiness.md  metrics-emitter.md  milestones.md  onboarding.md  release.md  tracing.md
docs/dev/adr/: README.md  bootstrap-bca-ci-statistics.md  circuit-breaker-consolidation.md  docker-testing-deferred.md  ecosystem-role-reconciliation.md  state-machine-hierarchy.md  tier-dependencies-topology.md  to-dict-serialization-pattern.md
docs/operations/: capacity-planning.md
docs/runbooks/: deployment-rollback.md  experiment-failure-recovery.md  incident-response.md  observability-setup.md  results-backup.md  upgrade-procedure.md
references/: notes.md
schemas/: defaults.schema.json  model.schema.json  rubric.schema.json  test.schema.json  tier.schema.json
scripts/: README.md  __init__.py  analyze_dryrun3.py  build_paper.sh  bump_version.py  check_ci_version_sync.py  check_conventional_commit.py  check_doc_config_consistency.py  check_dockerfile_npm_patches.sh  check_package_version_consistency.py  common.py  generate_all_results.py  generate_haiku_paper.sh  lint_configs.py  manage_experiment.py  migrate_skills_to_mnemosyne.py  patch_checkpoint_for_rejudge.py  quality_audit_feb_2026_issues.sh  rejudge_21_missing.sh  rerun_test001_judges.sh  run_batch_experiment.sh  run_ci_local.sh  run_haiku_experiment.sh  validate_links.py  validation.py
scripts/claude_code_compose/: __init__.py  compose_agents.py  compose_claude_md.py  compose_skills.py  generate_subtiers.py
scripts/hooks/: pre-push
skills/docs-status-fix/: SKILL.md
src/scylla/: __init__.py
tests/: conftest.py  test_import_layering.py
tests/scripts/: test_cleanup_stale_worktrees.sh
tests/unit/: __init__.py
(+259 files in other folders)
