[build-system]
requires = ["hatchling>=1.29.0,<2"]
build-backend = "hatchling.build"

[project]
name = "scylla"
version = "0.1.0"
description = "AI agent testing and optimization framework"
readme = "README.md"
license = {text = "BSD 3-Clause"}
requires-python = ">=3.10"
authors = [
    { name = "Micah Villmow <research@villmow.us>" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agents", "benchmarking", "evaluation", "testing"]
dependencies = [
    "click>=8.0,<9",
    "homericintelligence-hephaestus>=0.7.0,<1",
    "httpx>=0.28.1,<1",
    # jsonschema is a runtime dependency: scylla.config.loader (imported by the
    # scylla CLI entry point at startup) does `import jsonschema` unconditionally.
    "jsonschema>=4.26.0,<5",
    "pydantic>=2.13.4,<3",
    "pyyaml>=6.0.3,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
    "pre-commit>=4.6.0,<5",
    "ruff>=0.1.0,<1",
    "defusedxml>=0.7.1,<1",
]
nats = [
    "nats-py>=2.14.0,<3",
]
analysis = [
    "matplotlib>=3.10.9,<4",
    "numpy>=2.2.6,<3",
    "pandas>=2.3.3,<3",
    "seaborn>=0.13.2,<1",
    "scipy>=1.15.3,<2",
    "altair>=6.1.0,<7",
    "vl-convert-python>=1.9.0.post1,<2",
    "krippendorff>=0.8.2,<1",
    "statsmodels>=0.14,<1",
]

[project.urls]
Homepage = "https://github.com/HomericIntelligence/ProjectScylla"
Repository = "https://github.com/HomericIntelligence/ProjectScylla"
Issues = "https://github.com/HomericIntelligence/ProjectScylla/issues"

[project.scripts]
scylla = "scylla.cli.main:cli"

[tool.hatch.build.targets.wheel]
# packages = ["src/scylla"] is required so the CI Containerfile's editable-install
# layer (ci/Containerfile) — which COPYs only src/scylla/analysis/schemas/ and
# src/scylla/py.typed before `pixi install` — gives Hatchling enough info to ship
# the wheel; auto-discovery fails there since the rest of src/scylla/ isn't
# present yet. `packages` implies the src/ prefix strip for the wheel, so the
# module lands at site-packages/scylla/.
#
# IMPORTANT: do NOT add a global `[tool.hatch.build] sources = ["src"]` — that
# also remaps the *sdist* contents to scylla/ (dropping the src/ prefix), and
# `python -m build` builds the wheel FROM the sdist, where `packages =
# ["src/scylla"]` then matches nothing and ships an empty wheel (only
# dist-info). Verified: with this config, both `pip wheel .` (tree build) and
# `python -m build` (sdist -> wheel) ship scylla/... at the wheel top level.
packages = ["src/scylla"]

[tool.hatch.build.targets.sdist]
include = [
  "src/scylla",
  "tests",
  "pyproject.toml",
  "README.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# S101 is selected explicitly (not via the full "S"/bandit group) so that
# assert statements are flagged as errors in production code.  Tests are
# exempted below via per-file-ignores, where assert is the pytest idiom.
select = ["E", "F", "W", "I", "N", "D", "UP", "S101", "B", "SIM", "C4", "C901", "RUF", "T201"]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line before class (conflicts with D211)
    "D213",  # Multi-line summary second line (conflicts with D212)
    "D417",  # Missing argument descriptions in docstring
    # SIM — flake8-simplify
    "SIM117",  # pytest.raises() must be the innermost context manager; cannot merge
    # RUF — ruff-specific
    "RUF001",  # Intentional Unicode (Greek letters, math notation) in strings/docstrings
    "RUF002",  # Intentional Unicode (en-dash, multiplication sign) in docstrings
    "RUF003",  # Intentional Unicode (en-dash, multiplication sign) in comments
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# assert is idiomatic in pytest; S101 suppressed for all test files only.
# T201 (no print) is also suppressed for tests — print is common in fixtures/notebooks.
"tests/**" = ["S101", "T201"]
# C901 (mccabe complexity) threshold of 10 is enforced only for src/scylla/ production code.
# scripts/ utilities are exempt — they are standalone tools, not production modules.
# T201 (no print) is also exempted for scripts/ — they are CLI tools that use print for output.
"scripts/**" = ["C901", "T201"]
# T201 (no print) is enforced for all src/scylla/ code except the CLI layer,
# which may legitimately use print() for direct user output.
"src/scylla/cli/**" = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "src"     – repo src/ dir so scylla.* packages resolve without a package install.
# "scripts" – allows tests to import script modules by bare name (e.g.
#             `from export_data import …`, `from manage_experiment import …`).
#             Audited in #1193: no collection errors; all scripts importable.
pythonpath = ["src", "scripts"]
timeout = 120
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/scylla",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning:nats",
]

[tool.bandit]
# Bandit AST-based Python security scanner configuration.
# Replaces the pygrep shell=True pre-commit hook with deeper analysis.
# Scoped to scripts/ and scylla/ (not tests/ — assert is intentional there).
exclude_dirs = ["tests", "build", ".pixi", "docs"]
skips = [
    "B101",   # assert statements — intentional in Python, not a security issue
    "B404",   # subprocess import — we use subprocess with shell=False explicitly
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
# Incremental mypy adoption — Phases 1-8 of #687 complete (all strict settings enabled).
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true
# Strict settings — all enabled (#687 roadmap complete)
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_redefinition = false
implicit_reexport = false

[tool.coverage.run]
branch = true
source = ["src/scylla", "scripts"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    # claude-code subtier compose/generate utilities are CLI-only generators run
    # manually via subprocess to produce test inputs; they have no pytest coverage.
    # Tracked in #1872 (relocated from tests/claude-code/shared/compose/).
    "scripts/claude_code_compose/*",
]

[tool.coverage.report]
# DUAL THRESHOLD DESIGN:
# - This 75% floor: combined scylla/ + scripts/ floor for local runs.
# - 75% floor: scylla/ unit tests only, enforced via --cov-fail-under=75 in test.yml unit step.
# - 5% floor: integration tests, enforced via --cov-fail-under=5 in test.yml integration step.
# CI uses --override-ini="addopts=" to bypass these addopts and apply its own per-step floors.
# Locally, this floor gives developers immediate feedback on coverage regressions.
fail_under = 75
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ── import-linter contracts ───────────────────────────────────────────────────
# Guards the three DIP violations identified in #1937.
# Edge 1 (config ↔ metrics): not a live cycle; locked by the forbidden contract.
# Edge 2 (cli ↔ e2e): live cycle; eliminated by moving progress types to core/.
# Edge 3 (adapters ↔ e2e): live cycle; eliminated by moving TokenStats to core/.

[tool.importlinter]
root_package = "scylla"

[[tool.importlinter.contracts]]
name = "e2e must not import cli"
type = "forbidden"
source_modules = ["scylla.e2e"]
forbidden_modules = ["scylla.cli"]

[[tool.importlinter.contracts]]
name = "adapters must not import e2e"
type = "forbidden"
source_modules = ["scylla.adapters"]
forbidden_modules = ["scylla.e2e"]
# adapters.claude_code → e2e.rate_limit: pre-existing dependency outside #1937's scope.
# RateLimitError/detect_rate_limit depend on e2e.paths.get_agent_dir and are therefore
# coupled to the e2e layer.  Tracked as a follow-up refactor; narrowing the contract
# here rather than weakening the guard.
ignore_imports = [
    "scylla.adapters.claude_code -> scylla.e2e.rate_limit",
]

[[tool.importlinter.contracts]]
name = "core has no scylla layer dependencies"
type = "forbidden"
source_modules = ["scylla.core"]
forbidden_modules = [
    "scylla.cli",
    "scylla.e2e",
    "scylla.adapters",
    "scylla.executor",
    "scylla.metrics",
    "scylla.config",
    "scylla.reporting",
    "scylla.analysis",
    "scylla.judge",
    "scylla.discovery",
    "scylla.nats",
    "scylla.persistence",
]
